clusters/kube-lab/Dashy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - image: lissy93/dashy:2.1.1
        name: dashy-app
        imagePullPolicy: Always
        resources:
            limits:
              memory: 500Mi
            requests:
              memory: 500Mi
              cpu: 1
        ports:
        - containerPort: 80
