clusters/kube-lab/Dashy/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
  namespace: dashboard
spec:
  selector:
    app: dashy
  ports:
  - name: http
    targetPort: 80
    port: 80
