clusters/kube-lab/Dashy/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashy.lab.markaplay.net`)
      kind: Rule
      services:
      - name: dashy-service
        port: 8080
  tls:
    secretName: dashy-cert
